--- a/MeiDuo_Store/MeiDuo_Store/templates/register.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/register.html
@@ -50,7 +50,7 @@
                     <li>
                         <label>图形验证码:</label>
                         <input type="text" name="pic_code" id="pic_code" class="msg_input" v-model="image_code" @blur="check_image_code">
-                        <img :src="image_code_url" alt="图形验证码" class="pic_code">
+                        <img :src="image_code_url" alt="图形验证码" class="pic_code" @click="check_image_code">
                         <span class="error_tip" v-show="error_image_code">[[ error_image_code_message ]]</span>
                     </li>
                     <li>
