qq登陆绑定初次授权

--- a/MeiDuo_Store/MeiDuo_Store/templates/oauth_callback.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/oauth_callback.html
@@ -50,7 +50,7 @@
                                 <label>短信验证码:</label>
                                 <input type="text" name="sms_code" id="msg_code" @blur="check_sms_code"
                                        class="msg_input" v-model="sms_code">
-                                <a href="javascript:;" class="get_msg_code" @click="send_sms_code">获取短信验证码</a>
+                                <a href="javascript:;" class="get_msg_code" @click="send_sms_code">[[sms_code_tip]]</a>
                                 <span class="error_tip" v-show="error_sms_code">[[ error_sms_code_message ]]</span>
                             </li>
                             <li class="reg_sub">
