商品详情完成

--- a/MeiDuo_Store/MeiDuo_Store/templates/search/search.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/search/search.html
@@ -96,7 +96,7 @@
 <script>
     $(function () {
         $('#pagination').pagination({
-            currentPage: {{ page.name }},
+            currentPage: {{ page.number }},
             totalPage: {{ paginator.num_pages }},
             callback: function (current) {
                 // location.href = '/search/?q=iphone&amp;page=1';
