--- a/MeiDuo_Store/MeiDuo_Store/templates/search/search.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/search/search.html
@@ -18,20 +18,21 @@
         <div class="header">
             <div class="welcome fl">欢迎来到美多商城!</div>
             <div class="fr">
-                <div class="login_info fl">
-                    欢迎您：<em>张 山</em>
-                    <a href="javascript:;" class="quit">退出</a>
-                </div>
-                <div class="login_btn fl">
-                    <a href="login.html">登录</a>
+                <div class="login_btn fl" v-if="username">
+                    欢迎您：<em>[[ username ]]</em>
                     <span>|</span>
-                    <a href="../templates/register.html">注册</a>
+                    <a href="/logout/" class="quit">退出</a>
+                </div>
+                <div class="login_btn fl" v-else>
+                    <a href="/login/">登录</a>
+                    <span>|</span>
+                    <a href="/register/">注册</a>
                 </div>
                 <div class="user_link fl">
                     <span>|</span>
-                    <a href="user_center_info.html">用户中心</a>
+                    <a href="/info/">用户中心</a>
                     <span>|</span>
-                    <a href="cart.html">我的购物车</a>
+                    <a href="/carts/">我的购物车</a>
                     <span>|</span>
                     <a href="user_center_order.html">我的订单</a>
                 </div>
