--- a/MeiDuo_Store/MeiDuo_Store/templates/user_center_site.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/user_center_site.html
@@ -27,7 +27,7 @@
                     <span>|</span>
                     <a href="cart.html">我的购物车</a>
                     <span>|</span>
-                    <a href="/orders/">我的订单</a>
+                    <a href="/orders/info/1/">我的订单</a>
                 </div>
             </div>
         </div>
