--- a/MeiDuo_Store/MeiDuo_Store/templates/cart.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/cart.html
@@ -26,14 +26,15 @@
                     <span>|</span>
                     <a href="/register/">注册</a>
                 </div>
-				<div class="user_link fl">
-					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
-					<span>|</span>
-					<a href="cart.html">我的购物车</a>
-					<span>|</span>
-					<a href="/static/user_center_order.html">我的订单</a>
-				</div>
+
+                <div class="user_link fl">
+                    <span>|</span>
+                    <a href="/info/">用户中心</a>
+                    <span>|</span>
+                    <a href="/carts/">我的购物车</a>
+                    <span>|</span>
+                    <a href="/orders/info/1/">我的订单</a>
+                </div>
 			</div>
 		</div>		
 	</div>
