--- a/MeiDuo_Store/MeiDuo_Store/templates/user_center_info.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/user_center_info.html
@@ -25,9 +25,9 @@
                     <span>|</span>
                     <a href="/info/">用户中心</a>
                     <span>|</span>
-                    <a href="../static/cart.html">我的购物车</a>
+                    <a href="/carts/">我的购物车</a>
                     <span>|</span>
-                    <a href="../static/user_center_order.html">我的订单</a>
+                    <a href="/orders/info/1/">我的订单</a>
                 </div>
             </div>
         </div>
