--- a/MeiDuo_Store/MeiDuo_Store/templates/user_center_info.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/user_center_info.html
@@ -54,7 +54,7 @@
             <h3>用户中心</h3>
             <ul>
                 <li><a href="/info/" class="active">· 个人信息</a></li>
-                <li><a href="../static/user_center_order.html">· 全部订单</a></li>
+                <li><a href="/orders/info/1/">· 全部订单</a></li>
                 <li><a href="/addresses/">· 收货地址</a></li>
                 <li><a href="/password/">· 修改密码</a></li>
             </ul>
