--- a/MeiDuo_Store/MeiDuo_Store/templates/user_center_order.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/user_center_order.html
@@ -92,22 +92,22 @@
                         <td width="15%">{{ order.total_amount }}元<br>含运费：{{ order.freight }}元</td>
                         {% if order.status == 1 %}
                             <td width="15%">待支付</td>
-                            <td width="15%"><a href="goods_judge.html" class="oper_btn">支付</a></td>
+                            <td width="15%"><a href="javascript:;" class="oper_btn" @click="oper_btn_click('{{ order.order_id }}','1')">支付</a></td>
                         {% elif order.status == 2 %}
                             <td width="15%">待发货</td>
-                            <td width="15%"><a href="goods_judge.html" class="oper_btn">催发货</a></td>
+                            <td width="15%"><a href="javascript:;" class="oper_btn">催发货</a></td>
                         {% elif order.status == 3 %}
                             <td width="15%">待收货</td>
-                            <td width="15%"><a href="goods_judge.html" class="oper_btn">确认收货</a></td>
+                            <td width="15%"><a href="javascript:;" class="oper_btn">确认收货</a></td>
                         {% elif order.status == 4 %}
                             <td width="15%">待评价</td>
-                            <td width="15%"><a href="goods_judge.html" class="oper_btn">评价</a></td>
+                            <td width="15%"><a href="javascript:;" class="oper_btn"@click="oper_btn_click('{{ order.order_id }}','4')">评价</a></td>
                         {% elif order.status == 5 %}
                             <td width="15%">已完成</td>
-                            <td width="15%"><a href="goods_judge.html" class="oper_btn">再次购买</a></td>
+                            <td width="15%"><a href="javascript:;" class="oper_btn">再次购买</a></td>
                         {% elif order.status == 6 %}
                             <td width="15%">已取消</td>
-                            <td width="15%"><a href="goods_judge.html" class="oper_btn">重新购买</a></td>
+                            <td width="15%"><a href="javascript:;" class="oper_btn">重新购买</a></td>
                         {% endif %}
                     </tr>
                     </tbody>
