--- a/MeiDuo_Store/MeiDuo_Store/templates/order_success.html
+++ b/MeiDuo_Store/MeiDuo_Store/templates/order_success.html
@@ -30,7 +30,7 @@
                     <span>|</span>
                     <a href="cart.html">我的购物车</a>
                     <span>|</span>
-                    <a href="user_center_order.html">我的订单</a>
+                    <a href="/orders/info/1/">我的订单</a>
                 </div>
             </div>
         </div>
